deploy/openshift-route.yaml
# SPDX-FileCopyrightText: © 2025 Clifford Weinmann <https://www.cliffordweinmann.com/>
# SPDX-License-Identifier: MIT-0
#
# OpenShift Route
---
kind: "Route"
apiVersion: "route.openshift.io/v1"
metadata:
  name: "nginx-demo"
  annotations:
    # These 2 annotations disable sticky sessions
    haproxy.router.openshift.io/balance: "roundrobin"
    haproxy.router.openshift.io/disable_cookies: "true"
spec:
  path: "/"
  to:
    kind: "Service"
    name: "nginx-demo"
    weight: 100
  port:
    targetPort: "http"
  wildcardPolicy: "None"
